[gd_scene load_steps=16 format=2]

[ext_resource path="res://characters/sub/Sub.gd" type="Script" id=1]
[ext_resource path="res://characters/sub/Sub_Turqouise.png" type="Texture" id=2]
[ext_resource path="res://FX/Particles/bubble_32x32.png" type="Texture" id=3]
[ext_resource path="res://FX/Lights/128x128_beam_blur.png" type="Texture" id=4]
[ext_resource path="res://FX/Lights/128x128.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.8737
height = 75.4401

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.713465, 0.897824, 0.908691, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.275 ), 0.0, 2.55348, 0, 0, Vector2( 1, 1 ), 0.012958, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.48
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, -100, 0 )
initial_velocity = 87.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -80.0
linear_accel_random = 0.18
scale = 0.35
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="CanvasItemMaterial" id=10]
blend_mode = 1

[sub_resource type="Animation" id=7]
resource_name = "flicker"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "TriggerLights"
}, {
"args": [  ],
"method": "TriggerLights"
}, {
"args": [  ],
"method": "TriggerLights"
}, {
"args": [  ],
"method": "TriggerLights"
}, {
"args": [  ],
"method": "TriggerLights"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"

[node name="Sub" type="RigidBody2D"]
collision_layer = 2147483649
collision_mask = 6
script = ExtResource( 1 )

[node name="LeftBeamCone" type="Light2D" parent="."]
position = Vector2( -18.6386, 81.7068 )
rotation = 1.33169
scale = Vector2( 1, 3 )
enabled = false
texture = ExtResource( 4 )
offset = Vector2( 0, 64 )
color = Color( 0.921569, 0.929412, 0.65098, 1 )
energy = 0.7
range_height = 1024.0
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.0

[node name="LeftBeamGlow" type="Light2D" parent="."]
position = Vector2( -18.102, 80.9874 )
rotation = 1.33169
scale = Vector2( 1, 2 )
enabled = false
texture = ExtResource( 4 )
offset = Vector2( 0, 64 )
color = Color( 0.921569, 0.929412, 0.65098, 1 )
energy = 0.7
range_height = 1024.0

[node name="LeftBeamGlow2" type="Light2D" parent="."]
position = Vector2( -22.3446, 82.4016 )
rotation = 1.33169
texture = ExtResource( 5 )
color = Color( 0.921569, 0.929412, 0.65098, 1 )
energy = 0.2
range_height = 1024.0

[node name="RightBeamCone" type="Light2D" parent="."]
position = Vector2( 15.6945, 81.7068 )
rotation = -1.30376
scale = Vector2( 1, 3 )
enabled = false
texture = ExtResource( 4 )
offset = Vector2( 0, 64 )
color = Color( 0.921569, 0.929412, 0.65098, 1 )
energy = 0.7
range_height = 1024.0
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.0

[node name="RightBeamGlow" type="Light2D" parent="."]
position = Vector2( 14.8179, 80.4874 )
rotation = -1.30376
scale = Vector2( 1, 2 )
enabled = false
texture = ExtResource( 4 )
offset = Vector2( 0, 64 )
color = Color( 0.921569, 0.929412, 0.65098, 1 )
energy = 0.7
range_height = 1024.0

[node name="RightBeamGlow2" type="Light2D" parent="."]
position = Vector2( 19.7676, 81.9016 )
rotation = -1.30376
enabled = false
texture = ExtResource( 5 )
color = Color( 0.921569, 0.929412, 0.65098, 1 )
energy = 0.2
range_height = 1024.0

[node name="BackLight" type="Light2D" parent="."]
position = Vector2( -0.800499, 61.741 )
enabled = false
texture = ExtResource( 5 )
texture_scale = 10.0
energy = 0.4
range_height = 1024.0
shadow_enabled = true
shadow_gradient_length = 1.3
shadow_filter = 3
shadow_filter_smooth = 11.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10.6239, 12.4867 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.667419, 38.043 )
shape = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 11.625, 12.8204 )
scale = Vector2( 0.2, 0.2 )
polygon = PoolVector2Array( -88.2722, -147.883, -161.688, -246.327, -158.351, -288.041, -96.615, -253.002, -73.2553, -421.525, -46.5585, -419.856, -16.5247, -209.619, 172.021, -186.26, -28.2045, -151.22 )

[node name="WindowGlow" type="Light2D" parent="."]
position = Vector2( -0.800499, 65.741 )
texture = ExtResource( 5 )
texture_scale = 0.7
color = Color( 0.92549, 0.737255, 0.0980392, 1 )
energy = 0.8
range_height = 1024.0

[node name="PassiveBubbles" type="Particles2D" parent="."]
material = SubResource( 9 )
position = Vector2( 0, -71.7713 )
amount = 300
lifetime = 15.0
randomness = 1.0
local_coords = false
draw_order = 1
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="BoostBubbles" type="Particles2D" parent="."]
material = SubResource( 10 )
position = Vector2( 0, -71.7713 )
amount = 1000
lifetime = 15.0
randomness = 1.0
local_coords = false
draw_order = 1
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flicker = SubResource( 7 )
anims/idle = SubResource( 8 )
